# mdns-resolver

./: Cargo.toml  README.md
src/: error.rs  lib.rs
