[package]
name = "mdns-resolver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base requirements
tokio = { version = "1.5", features = ["full"] }
tracing = "0.1"
lazy_static = "1.4"
simple-dns = "0.2"
socket2 = { version = "0.4", features = ["all"] }
thiserror = "1.0"
rand = "0.8"

# requirements for bins
color-eyre = { version = "0.5", optional = true }
tracing-error = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[features]
default = []

bins = ["color-eyre", "tracing-error", "tracing-subscriber"]

[[bin]]
name = "mdns-query"
path = "src/bin/mdns-query.rs"
required-features = ["bins"]
